--- a/Adrian/style.css
+++ b/Adrian/style.css
@@ -6,8 +6,9 @@
 
 .background {
   width: 100%;
+  margin: 0;
   height: 150px;
-  background-color: white;
+  background-color: rgb(30, 96, 172);
 }
 
 body {
@@ -17,28 +18,37 @@ body {
 .card-content {
   background-color: white;
   position: absolute;
-  top: 55px;
-  left: 23%;
-  width: 55%;
+  margin-left: auto;
+  margin-right: auto;
+  top: 60px;
+  left: 0;
+  right: 0;
+  min-width: 200px;
+  width: 900px;
+  height: 350px;
   display: flex;
   align-items: center;
-  border: 1px solid rgb(30, 96, 172);
-  box-shadow: 0 0 20px #2187e7b3;
+  box-shadow: 0 0 10px #2187e7b3;
+  overflow: hidden;
 }
 
 img {
   position: relative;
-  left: 0;
-  width: 450px;
+  width: 328px;
 }
 
 .card {
-  height: 400px;
-  align-items: center;
-  width: 55%;
+  width: 100%;
+  height: 350px;
+}
+
+.card p {
+  color: black;
+  line-height: 12px;
 }
 
 h1 {
+  margin-top: 10px;
   color: rgb(30, 96, 172);
   font-size: 40px;
 }
@@ -51,25 +61,29 @@ hr {
 h3 {
   font-size: 18px;
 }
-
-p {
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
+.rightText {
+  position: relative;
+  margin-left: 100px;
+  top: -16px;
+  color: rgb(153, 152, 152);
+  line-height: 12px;
 }
 
 .footer {
+  position: relative;
+  bottom: -3px;
   display: flex;
   justify-content: space-between;
   background-color: rgb(30, 96, 172);
-  margin-top: 7px;
-  height: 68px;
   align-items: center;
   width: 100%;
   padding: 10px;
 }
 
 .fab {
-  font-size: 32px;
+  margin-left: 16px;
+  margin-right: 16px;
+  font-size: 20px;
   color: white;
   transition: transform 0.2s;
   cursor: pointer;
@@ -84,19 +98,18 @@ p {
   font-size: 25px;
   font-weight: bold;
   width: 100%;
-  margin-top: 400px;
+  margin-top: 350px;
+  margin-bottom: 50px;
   text-align: center;
 }
 
 .percentage {
+  margin: 0 auto;
+  width: 900px;
   background-color: white;
-  margin-left: 25%;
-  margin-top: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 50%;
-  border: 1px solid rgb(30, 96, 172);
   box-shadow: 0 0 20px #2187e7b3;
 }
 
@@ -104,9 +117,15 @@ p {
   width: 400px;
 }
 
+.paragraph p {
+  margin-left: 50px;
+  color: black;
+  text-align: justify;
+}
+
 .skills {
   width: 400px;
-  margin: 60px auto;
+  margin: 30px auto;
 }
 
 .skills li {
@@ -114,40 +133,55 @@ p {
   margin: 20px 0;
 }
 
+.skills p {
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 0 10px;
+  padding: 0;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.skills p:nth-child(2) {
+  float: right;
+  position: relative;
+  top: -25px;
+}
+
 .bar {
-  background: rgba(0, 255, 255, 0.603);
+  background: rgb(153, 152, 152);
   display: block;
   height: 5px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 5px;
-  overflow: hidden;
-  box-shadow: 0 0 10px #2187e7b3;
+  box-shadow: 0 0 10px rgb(30, 96, 172);
 }
 
 .bar span {
-  height: 5px;
+  height: 3px;
+  border-radius: 5px;
   float: left;
-  background: #2187e7;
+  background: rgb(30, 96, 172);
 }
 
 .html {
   width: 90%;
-  animation: html 3s;
+  animation: html 4s;
 }
 
 .css {
   width: 80%;
-  animation: css 3s;
+  animation: css 4s;
 }
 
 .js {
   width: 10%;
-  animation: js 3s;
+  animation: js 4s;
 }
 
 .mobileappdev {
-  width: 3%;
-  animation: mobileappdev 3s;
+  width: 5%;
+  animation: mobileappdev 4s;
 }
 
 @keyframes html {
@@ -182,7 +216,7 @@ p {
     width: 0%;
   }
   100% {
-    width: 3%;
+    width: 5%;
   }
 }
 
@@ -198,7 +232,7 @@ p {
 /* The actual timeline (the vertical ruler) */
 .timeline {
   position: relative;
-  max-width: 1200px;
+  width: 850px;
   margin: 60px auto;
 }
 
@@ -232,7 +266,7 @@ p {
   position: absolute;
   width: 12px;
   height: 12px;
-  right: -7px;
+  right: -5px;
   background-color: rgb(30, 96, 172);
   top: 35px;
   border-radius: 50%;
@@ -279,12 +313,12 @@ p {
 
 /* Fix the circle for containers on the right side */
 .right::after {
-  left: -8px;
+  left: -7px;
 }
 
 /* The actual content */
 .content {
-  padding: 14px 26px;
+  padding-bottom: 20px;
   background-color: white;
   position: relative;
   border: 2px solid white;
@@ -316,11 +350,104 @@ h4::before {
   content: " ";
   height: 0;
   position: absolute;
-  top: 72px;
+  top: 65px;
   width: 0px;
   z-index: 1;
-  right: 436px;
+  right: 285px;
   border-left: 14px solid transparent;
   border-right: 0 solid transparent;
   border-bottom: 28px solid rgb(30, 96, 172);
+}
+
+@media screen and (max-width: 480px) {
+  .card-content {
+    width: 480px;
+    height: 485px;
+    display: block;
+  }
+  img {
+    width: 200px;
+    margin-left: 30%;
+  }
+  h1 {
+    margin-top: 0px;
+    font-size: 25px;
+    text-align: center;
+    letter-spacing: 2px;
+  }
+  h3 {
+    font-size: 12px;
+    text-align: center;
+  }
+  .card {
+    height: 250px;
+  }
+  .card p {
+    margin-left: 100px;
+    font-size: 14px;
+    line-height: 12px;
+  }
+  .rightText {
+    margin-left: 200px;
+    top: -18px;
+    font-size: 14px;
+    line-height: 12px;
+  }
+  .footer {
+    bottom: 10px;
+  }
+  .fab {
+    font-size: 16px;
+    margin: 0px 20px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+  }
+  .percentage {
+    width: 480px;
+    display: block;
+    height: 360px;
+    padding-top: 20px;
+  }
+  .paragraph {
+    width: 480px;
+  }
+  .paragraph p {
+    text-align: justify;
+    justify-content: center;
+    padding-right: 40px;
+    margin-left: 40px;
+  }
+  .title1 {
+    font-size: 20px;
+    margin-top: 430px;
+    margin-bottom: 20px;
+  }
+  .title2 {
+    font-size: 20px;
+    margin-top: 40px;
+  }
+  .timeline {
+    width: 480px;
+    margin-top: 20px;
+  }
+  .timeline::after {
+    margin-top: 14px;
+    margin-bottom: 14px;
+  }
+  .content {
+    padding: 10px 6px;
+  }
+  h2 {
+    font-size: 15px;
+  }
+  p {
+    font-size: 12px;
+  }
+  h4 {
+    font-size: 12px;
+    width: 60px;
+  }
+  h4::before {
+    display: none;
+  }
 }
