--- a/Apple Layout/style.css
+++ b/Apple Layout/style.css
@@ -15,6 +15,7 @@ body {
 h2 {
   font-size: 35px;
   margin: 10px;
+  padding-top: 70px;
 }
 
 h2 span {
@@ -32,11 +33,12 @@ p {
 }
 
 .background1 {
-  background: url(./background1.jpg);
+  background: url(.img/background1.jpg);
 }
 
 .background2 {
-  background: url(./background2.jpg);
+  background: url(.img/background2.jpg);
+  color: rgb(41, 41, 41);
 }
 
 .container,
@@ -44,10 +46,13 @@ p {
 .background2 {
   height: 225px;
   background-size: cover;
+  background-position: center;
   background-attachment: fixed;
   align-items: center;
   justify-content: center;
   text-align: center;
+  transition: all 0.3s ease-in;
+  cursor: pointer;
 }
 
 .container .background1:nth-of-type(1) {
@@ -65,3 +70,14 @@ p {
 .container .background2:nth-of-type(10) {
   grid-column: span 2;
 }
+
+.container .background1:hover {
+  opacity: 0.6;
+  transform: scale(0.99);
+}
+
+.container .background2:hover {
+  opacity: 0.6;
+  transform: scale(0.99);
+}
+
