--- a/Andrew/Tribus GSAP/style.css
+++ b/Andrew/Tribus GSAP/style.css
@@ -6,11 +6,13 @@
 
 .wrapper {
   width: 100%;
-  height: 100vh;
+  height: 150vh;
   background: #02b1aa;
 }
 
 #tribus_svg {
+  display: block;
+  margin: auto;
   width: 100%;
-  max-height: 60%;
+  max-height: 80%;
 }
