--- a/Andrew/Tribus GSAP/style.css
+++ b/Andrew/Tribus GSAP/style.css
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+body {
+  overflow: hidden;
+}
+
 .wrapper {
   width: 100%;
   height: 150vh;
@@ -11,8 +15,6 @@
 }
 
 #tribus_svg {
-  display: block;
-  margin: auto;
   width: 100%;
   max-height: 80%;
 }
