--- a/Andrew/Tribus GSAP/style.css
+++ b/Andrew/Tribus GSAP/style.css
@@ -4,17 +4,26 @@
   margin: 0;
 }
 
-body {
-  overflow: hidden;
-}
-
 .wrapper {
   width: 100%;
-  height: 150vh;
+  height: 100vh;
   background: #02b1aa;
+  position: fixed;
 }
 
 #tribus_svg {
   width: 100%;
   max-height: 80%;
+  transform: scale(1.2);
+  margin-top: 30px;
+}
+
+.contact {
+  position: absolute;
+  bottom: 10vh;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: "Montserrat";
 }
