--- a/Andrew/Tribus GSAP/style.css
+++ b/Andrew/Tribus GSAP/style.css
@@ -5,10 +5,9 @@
 }
 
 .wrapper {
+  background-color: #02b1aa;
   width: 100%;
   height: 100vh;
-  background: #02b1aa;
-  position: fixed;
 }
 
 #tribus_svg {
@@ -19,11 +18,103 @@
 }
 
 .contact {
-  position: absolute;
-  bottom: 10vh;
-  left: 0;
+  background-color: #3b3a3a;
   width: 100%;
+  height: 100vh;
   text-align: center;
   color: #ffffff;
-  font-family: "Montserrat";
+  font-family: "Raleway";
+}
+
+.panel {
+  position: relative;
+  display: flex;
+  width: 100%;
+}
+
+.contact_content {
+  width: 60vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+h2 {
+  margin: 2.5rem 0rem;
+  font-weight: lighter;
+}
+h1 {
+  font-size: xxx-large;
+}
+
+.contact-button {
+  background: #02b1aa !important;
+  font-family: "Raleway" !important;
+  font-weight: bold !important;
+  scale: 1.3 !important;
+  margin-top: 2rem !important;
+}
+
+.logo {
+  width: 20rem;
+  margin-bottom: 2rem;
+}
+
+.scroll {
+  color: white;
+  font-family: "Raleway";
+  font-weight: bold;
+  font-size: 1.5rem;
+  text-align: center;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%);
+  display: grid;
+}
+
+.arrow_down {
+  margin-top: 0.5rem;
+  scale: 2;
+}
+
+.site_background {
+  height: 100vh;
+}
+
+@media (max-width: 1160px) {
+  h1 {
+    font-size: xx-large;
+  }
+
+  h2 {
+    font-size: larger;
+  }
+
+  .contact_content {
+    width: 65vw;
+  }
+
+  .logo {
+    width: 16rem;
+  }
+}
+
+@media (max-width: 410px) {
+  h1 {
+    font-size: x-large;
+  }
+
+  h2 {
+    font-size: large;
+  }
+
+  .contact_content {
+    width: 80vw;
+  }
+
+  .logo {
+    width: 13rem;
+  }
 }
