--- a/Andrew/Tribus GSAP/style.css
+++ b/Andrew/Tribus GSAP/style.css
@@ -18,6 +18,8 @@
 }
 
 .contact {
+  background-image: url("background.svg");
+  background-size: cover;
   background-color: #3b3a3a;
   width: 100%;
   height: 100vh;
@@ -56,7 +58,7 @@ h1 {
   margin-top: 2rem !important;
 }
 
-.logo {
+.tribus_logo {
   width: 20rem;
   margin-bottom: 2rem;
 }
@@ -68,10 +70,11 @@ h1 {
   font-size: 1.5rem;
   text-align: center;
   position: absolute;
-  bottom: 5%;
+  bottom: 15%;
   left: 50%;
   transform: translate(-50%);
   display: grid;
+  z-index: 1;
 }
 
 .arrow_down {
@@ -85,19 +88,35 @@ h1 {
 
 @media (max-width: 1160px) {
   h1 {
-    font-size: xx-large;
+    font-size: 2rem;
   }
 
   h2 {
-    font-size: larger;
+    font-size: 1rem;
+    margin: 2rem 0;
   }
 
   .contact_content {
     width: 65vw;
   }
 
-  .logo {
+  .tribus_logo {
     width: 16rem;
+  }
+}
+
+@media (max-width: 1000px) {
+  #tribus_svg {
+    max-height: 90%;
+  }
+  .scroll {
+    font-size: 1rem;
+    bottom: 12%;
+  }
+
+  .arrow_down {
+    margin-top: 0px;
+    scale: 1;
   }
 }
 
@@ -114,7 +133,27 @@ h1 {
     width: 80vw;
   }
 
-  .logo {
+  .tribus_logo {
     width: 13rem;
+  }
+}
+
+@media (max-height: 420px) and (max-width: 820px) {
+  .tribus_logo {
+    width: 10rem;
+  }
+
+  h1 {
+    font-size: x-large;
+  }
+
+  h2 {
+    font-size: large;
+    margin: 1rem 0;
+  }
+
+  .contact-button {
+    margin-top: 1rem !important;
+    scale: 1 !important;
   }
 }
